# shpyx

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bandit.yml  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  linters.yaml  mypy.yaml  release.yml  unit_tests.yaml
linters/: .eslintrc.js  .flake8  .prettierrc.js  Dockerfile  biome.json  biome.template.json  cspell.json  pyproject.toml  ruff.toml  taplo.toml  yamllint.yaml
linters/cspell/: words.txt
shpyx/: __init__.py  cmd_runner.py  errors.py  mypy.ini  mypy.toml  result.py  runner.py
src/: __init__.py
tests/: print_hello.py  pytest.ini  test_default_run.py  test_runner.py  test_updater.py
