[build-system]
requires = ["poetry==1.8.3"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "shpyx"
packages = [{include = "shpyx"}]
version = "0.0.32"
description = "Run shell commands in Python"
authors = ["Yossi Rozantsev"]
license = "MIT"
readme = "README.md"
keywords = ["shell", "bash", "terminal", "script"]
homepage = "https://github.com/Apakottur/shpyx"
repository = "https://github.com/Apakottur/shpyx"
documentation = "https://github.com/Apakottur/shpyx"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
include = ["shpyx/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "1.13.0"
pre-commit = "4.0.1"
pytest = "8.3.4"
pytest-cov = "6.0.0"
pytest-mock = "3.14.0"

[tool.poetry.extras]

[tool.poetry.scripts]

[tool.poetry.urls]
