[build-system]
requires = ["poetry==1.8.3"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "shpyx"
packages = [{include = "shpyx"}]
version = "0.0.34"
description = "Run shell commands in Python"
authors = ["Yossi Rozantsev"]
license = "MIT"
readme = "README.md"
keywords = ["shell", "bash", "terminal", "script"]
homepage = "https://github.com/Apakottur/shpyx"
repository = "https://github.com/Apakottur/shpyx"
documentation = "https://github.com/Apakottur/shpyx"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
include = ["shpyx/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.extras]

[tool.poetry.group.dev.dependencies]
mypy = "1.17.1"
pre-commit = "4.3.0"
pytest = "8.4.1"
pytest-cov = "6.2.1"
pytest-mock = "3.14.1"

[tool.poetry.scripts]

[tool.poetry.urls]
